--- a/Penerimaan.rdlc
+++ b/Penerimaan.rdlc
@@ -1450,13 +1450,13 @@
             </Style>
           </Tablix>
         </ReportItems>
-        <Height>1.31984cm</Height>
+        <Height>1.22914cm</Height>
         <Style />
       </Body>
       <Width>18.9cm</Width>
       <Page>
         <PageHeader>
-          <Height>7.88216cm</Height>
+          <Height>6.59291cm</Height>
           <PrintOnFirstPage>true</PrintOnFirstPage>
           <PrintOnLastPage>true</PrintOnLastPage>
           <ReportItems>
@@ -1465,7 +1465,7 @@
                 <Line Name="Line1">
                   <Top>0.94636cm</Top>
                   <Height>0cm</Height>
-                  <Width>5.19395cm</Width>
+                  <Width>5.55247cm</Width>
                   <Style>
                     <Border>
                       <Style>Solid</Style>
@@ -1475,7 +1475,7 @@
                 </Line>
                 <Line Name="Line2">
                   <Top>0.94636cm</Top>
-                  <Left>1.63095cm</Left>
+                  <Left>1.98947cm</Left>
                   <Height>3.40898cm</Height>
                   <Width>0cm</Width>
                   <ZIndex>1</ZIndex>
@@ -1488,7 +1488,7 @@
                 </Line>
                 <Line Name="Line3">
                   <Top>0.94636cm</Top>
-                  <Left>3.45706cm</Left>
+                  <Left>3.81558cm</Left>
                   <Height>3.40898cm</Height>
                   <Width>0cm</Width>
                   <ZIndex>2</ZIndex>
@@ -1502,7 +1502,7 @@
                 <Line Name="Line4">
                   <Top>1.80372cm</Top>
                   <Height>0cm</Height>
-                  <Width>5.19395cm</Width>
+                  <Width>5.55247cm</Width>
                   <ZIndex>3</ZIndex>
                   <Style>
                     <Border>
@@ -1514,7 +1514,7 @@
                 <Line Name="Line5">
                   <Top>2.64062cm</Top>
                   <Height>0cm</Height>
-                  <Width>5.19395cm</Width>
+                  <Width>5.55247cm</Width>
                   <ZIndex>4</ZIndex>
                   <Style>
                     <Border>
@@ -1526,7 +1526,7 @@
                 <Line Name="Line6">
                   <Top>3.49798cm</Top>
                   <Height>0cm</Height>
-                  <Width>5.19395cm</Width>
+                  <Width>5.55247cm</Width>
                   <ZIndex>5</ZIndex>
                   <Style>
                     <Border>
@@ -1555,8 +1555,9 @@
                     </Paragraph>
                   </Paragraphs>
                   <rd:DefaultName>Textbox101</rd:DefaultName>
+                  <Left>0.03528cm</Left>
                   <Height>0.94636cm</Height>
-                  <Width>5.19395cm</Width>
+                  <Width>5.51719cm</Width>
                   <ZIndex>6</ZIndex>
                   <Style>
                     <Border>
@@ -1576,9 +1577,10 @@
                     <Paragraph>
                       <TextRuns>
                         <TextRun>
-                          <Value>s</Value>
+                          <Value>Foreman</Value>
                           <Style>
                             <FontFamily>Segoe UI</FontFamily>
+                            <FontSize>8pt</FontSize>
                           </Style>
                         </TextRun>
                       </TextRuns>
@@ -1590,7 +1592,7 @@
                   <rd:DefaultName>Textbox101</rd:DefaultName>
                   <Top>0.94636cm</Top>
                   <Height>0.85736cm</Height>
-                  <Width>1.52512cm</Width>
+                  <Width>1.9542cm</Width>
                   <ZIndex>7</ZIndex>
                   <Style>
                     <Border>
@@ -1610,9 +1612,10 @@
                     <Paragraph>
                       <TextRuns>
                         <TextRun>
-                          <Value>As.S</Value>
+                          <Value>As.Foreman</Value>
                           <Style>
                             <FontFamily>Segoe UI</FontFamily>
+                            <FontSize>8pt</FontSize>
                           </Style>
                         </TextRun>
                       </TextRuns>
@@ -1624,7 +1627,7 @@
                   <rd:DefaultName>Textbox101</rd:DefaultName>
                   <Top>1.839cm</Top>
                   <Height>0.73107cm</Height>
-                  <Width>1.56039cm</Width>
+                  <Width>1.91891cm</Width>
                   <ZIndex>8</ZIndex>
                   <Style>
                     <Border>
@@ -1658,7 +1661,7 @@
                   <rd:DefaultName>Textbox101</rd:DefaultName>
                   <Top>2.64062cm</Top>
                   <Height>0.85736cm</Height>
-                  <Width>1.59568cm</Width>
+                  <Width>1.9542cm</Width>
                   <ZIndex>9</ZIndex>
                   <Style>
                     <Border>
@@ -1692,7 +1695,7 @@
                   <rd:DefaultName>Textbox101</rd:DefaultName>
                   <Top>3.49798cm</Top>
                   <Height>0.85736cm</Height>
-                  <Width>1.63095cm</Width>
+                  <Width>1.98947cm</Width>
                   <ZIndex>10</ZIndex>
                   <Style>
                     <Border>
@@ -1727,7 +1730,7 @@
                   </Paragraphs>
                   <rd:DefaultName>Textbox5</rd:DefaultName>
                   <Top>3.55683cm</Top>
-                  <Left>1.63095cm</Left>
+                  <Left>1.98947cm</Left>
                   <Height>0.69268cm</Height>
                   <Width>1.75289cm</Width>
                   <ZIndex>11</ZIndex>
@@ -1764,7 +1767,7 @@
                   </Paragraphs>
                   <rd:DefaultName>Textbox5</rd:DefaultName>
                   <Top>3.56854cm</Top>
-                  <Left>3.56023cm</Left>
+                  <Left>3.91875cm</Left>
                   <Height>0.69268cm</Height>
                   <Width>1.50594cm</Width>
                   <ZIndex>12</ZIndex>
@@ -1781,10 +1784,10 @@
                 </Textbox>
               </ReportItems>
               <KeepTogether>true</KeepTogether>
-              <Top>0.59396cm</Top>
-              <Left>13.48855cm</Left>
+              <Top>0.27646cm</Top>
+              <Left>13.13003cm</Left>
               <Height>4.35534cm</Height>
-              <Width>5.19395cm</Width>
+              <Width>5.55247cm</Width>
               <Style>
                 <Border>
                   <Style>Solid</Style>
@@ -1814,8 +1817,8 @@
                 </Paragraph>
               </Paragraphs>
               <rd:DefaultName>Textbox99</rd:DefaultName>
-              <Top>0.59396cm</Top>
-              <Left>4.75401cm</Left>
+              <Top>0.27646cm</Top>
+              <Left>4.57188cm</Left>
               <Height>0.94636cm</Height>
               <Width>8.41704cm</Width>
               <ZIndex>1</ZIndex>
@@ -1863,8 +1866,8 @@
                 </Paragraph>
               </Paragraphs>
               <rd:DefaultName>Textbox99</rd:DefaultName>
-              <Top>1.39921cm</Top>
-              <Left>5.40263cm</Left>
+              <Top>1.08171cm</Top>
+              <Left>5.2205cm</Left>
               <Height>1.20037cm</Height>
               <Width>6.9787cm</Width>
               <ZIndex>2</ZIndex>
@@ -1896,7 +1899,7 @@
                 </Paragraph>
               </Paragraphs>
               <rd:DefaultName>Textbox7</rd:DefaultName>
-              <Top>3.06925cm</Top>
+              <Top>2.75175cm</Top>
               <Left>0.30903cm</Left>
               <Height>0.70583cm</Height>
               <Width>2.65522cm</Width>
@@ -1929,47 +1932,11 @@
                 </Paragraph>
               </Paragraphs>
               <rd:DefaultName>Textbox7</rd:DefaultName>
-              <Top>3.95147cm</Top>
+              <Top>3.63397cm</Top>
               <Left>0.30903cm</Left>
               <Height>0.70583cm</Height>
               <Width>2.61994cm</Width>
               <ZIndex>4</ZIndex>
-              <Style>
-                <Border>
-                  <Style>None</Style>
-                </Border>
-                <PaddingLeft>2pt</PaddingLeft>
-                <PaddingRight>2pt</PaddingRight>
-                <PaddingTop>2pt</PaddingTop>
-                <PaddingBottom>2pt</PaddingBottom>
-              </Style>
-            </Textbox>
-            <Textbox Name="Textbox9">
-              <CanGrow>true</CanGrow>
-              <KeepTogether>true</KeepTogether>
-              <Paragraphs>
-                <Paragraph>
-                  <TextRuns>
-                    <TextRun>
-                      <Value />
-                      <Style>
-                        <FontFamily>Segoe UI</FontFamily>
-                        <FontWeight>Normal</FontWeight>
-                      </Style>
-                    </TextRun>
-                  </TextRuns>
-                  <Style />
-                </Paragraph>
-              </Paragraphs>
-              <rd:DefaultName>Textbox7</rd:DefaultName>
-              <Top>4.83369cm</Top>
-              <Left>0.30903cm</Left>
-              <Height>0.70583cm</Height>
-              <Width>2.12605cm</Width>
-              <ZIndex>5</ZIndex>
-              <Visibility>
-                <Hidden>true</Hidden>
-              </Visibility>
               <Style>
                 <Border>
                   <Style>None</Style>
@@ -2005,11 +1972,11 @@
                 </Paragraph>
               </Paragraphs>
               <rd:DefaultName>Textbox7</rd:DefaultName>
-              <Top>3.95147cm</Top>
+              <Top>3.63397cm</Top>
               <Left>3.10536cm</Left>
               <Height>0.70583cm</Height>
               <Width>5.51963cm</Width>
-              <ZIndex>6</ZIndex>
+              <ZIndex>5</ZIndex>
               <Style>
                 <Border>
                   <Style>None</Style>
@@ -2053,47 +2020,11 @@
                 </Paragraph>
               </Paragraphs>
               <rd:DefaultName>Textbox7</rd:DefaultName>
-              <Top>3.06925cm</Top>
+              <Top>2.75175cm</Top>
               <Left>3.10536cm</Left>
               <Height>0.70583cm</Height>
               <Width>5.51963cm</Width>
-              <ZIndex>7</ZIndex>
-              <Style>
-                <Border>
-                  <Style>None</Style>
-                </Border>
-                <PaddingLeft>2pt</PaddingLeft>
-                <PaddingRight>2pt</PaddingRight>
-                <PaddingTop>2pt</PaddingTop>
-                <PaddingBottom>2pt</PaddingBottom>
-              </Style>
-            </Textbox>
-            <Textbox Name="Textbox12">
-              <CanGrow>true</CanGrow>
-              <KeepTogether>true</KeepTogether>
-              <Paragraphs>
-                <Paragraph>
-                  <TextRuns>
-                    <TextRun>
-                      <Value />
-                      <Style>
-                        <FontFamily>Segoe UI</FontFamily>
-                        <FontWeight>Normal</FontWeight>
-                      </Style>
-                    </TextRun>
-                  </TextRuns>
-                  <Style />
-                </Paragraph>
-              </Paragraphs>
-              <rd:DefaultName>Textbox7</rd:DefaultName>
-              <Top>4.83369cm</Top>
-              <Left>2.47036cm</Left>
-              <Height>0.70583cm</Height>
-              <Width>5.51963cm</Width>
-              <ZIndex>8</ZIndex>
-              <Visibility>
-                <Hidden>true</Hidden>
-              </Visibility>
+              <ZIndex>6</ZIndex>
               <Style>
                 <Border>
                   <Style>None</Style>
@@ -2108,11 +2039,11 @@
               <Source>Embedded</Source>
               <Value>Picture1</Value>
               <Sizing>Fit</Sizing>
-              <Top>0.59396cm</Top>
-              <Left>0.42503cm</Left>
+              <Top>0.27646cm</Top>
+              <Left>0.2429cm</Left>
               <Height>1.20036cm</Height>
               <Width>2.44224cm</Width>
-              <ZIndex>9</ZIndex>
+              <ZIndex>7</ZIndex>
               <Style>
                 <Border>
                   <Style>None</Style>
@@ -2123,11 +2054,11 @@
               <Source>Embedded</Source>
               <Value>Picture2</Value>
               <Sizing>Fit</Sizing>
-              <Top>0.59396cm</Top>
-              <Left>2.9731cm</Left>
+              <Top>0.27646cm</Top>
+              <Left>2.79097cm</Left>
               <Height>1.7019cm</Height>
               <Width>1.6398cm</Width>
-              <ZIndex>10</ZIndex>
+              <ZIndex>8</ZIndex>
               <Style>
                 <Border>
                   <Style>None</Style>
@@ -3017,11 +2948,11 @@
                 </Textbox>
               </ReportItems>
               <KeepTogether>true</KeepTogether>
-              <Top>6.06291cm</Top>
+              <Top>4.79291cm</Top>
               <Left>0.2429cm</Left>
               <Height>1.8cm</Height>
               <Width>18.41587cm</Width>
-              <ZIndex>11</ZIndex>
+              <ZIndex>9</ZIndex>
               <Style>
                 <Border>
                   <Style>Solid</Style>
@@ -3037,7 +2968,7 @@
           </Style>
         </PageHeader>
         <PageFooter>
-          <Height>5.20322cm</Height>
+          <Height>5.10632cm</Height>
           <PrintOnFirstPage>true</PrintOnFirstPage>
           <PrintOnLastPage>true</PrintOnLastPage>
           <ReportItems>
@@ -8120,8 +8051,8 @@
         <PageWidth>21cm</PageWidth>
         <LeftMargin>1cm</LeftMargin>
         <RightMargin>1cm</RightMargin>
-        <TopMargin>1cm</TopMargin>
-        <BottomMargin>1cm</BottomMargin>
+        <TopMargin>0cm</TopMargin>
+        <BottomMargin>0cm</BottomMargin>
         <ColumnSpacing>0.13cm</ColumnSpacing>
         <Style />
       </Page>
