--- a/Penerimaan.rdlc
+++ b/Penerimaan.rdlc
@@ -1049,6 +1049,7 @@
                             <VerticalAlign>Middle</VerticalAlign>
                           </Style>
                         </Textbox>
+                        <rd:Selected>true</rd:Selected>
                       </CellContents>
                     </TablixCell>
                     <TablixCell>
