--- a/RiwayatPerbaikan.rdlc
+++ b/RiwayatPerbaikan.rdlc
@@ -2389,6 +2389,7 @@
                                 <PaddingBottom>2pt</PaddingBottom>
                               </Style>
                             </Textbox>
+                            <rd:Selected>true</rd:Selected>
                           </CellContents>
                         </TablixCell>
                         <TablixCell>
